[Fix Bug] white-space:pre-wrap added

--- a/src/stylesheets/components/_single-report.scss
+++ b/src/stylesheets/components/_single-report.scss
@@ -20,6 +20,7 @@
     .report-content__text {
         padding: 10px;
         line-height: 1.5;
+        white-space: pre-wrap;
     }
     .report-content__text-edit {
         width: 97%;
